RESOLVED FIXED266389
High CPU usage may occur due to infinite loop in WebProcessPool::processForNavigation()
https://bugs.webkit.org/show_bug.cgi?id=266389
Summary High CPU usage may occur due to infinite loop in WebProcessPool::processForNa...
Chris Dumez
Reported 2023-12-13 19:56:58 PST
High CPU usage may occur due to infinite loop in WebProcessPool::processForNavigation().
Attachments
Chris Dumez
Comment 1 2023-12-13 19:57:05 PST
Chris Dumez
Comment 2 2023-12-13 21:04:03 PST
EWS
Comment 3 2023-12-14 10:47:00 PST
Committed 272059@main (5ea58380f094): <https://commits.webkit.org/272059@main> Reviewed commits have been landed. Closing PR #21778 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.